fix for wrapping that always happens on android in flex containers

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -259,5 +259,8 @@ strong {
     display: inline-block;
     margin-left: 5px;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
